# borack_vision

./: .gitignore
cmake/: FindEigen3.cmake  Macros.cmake
modules/mvc/: mesh2d.cpp  mesh2d.hpp
old_src/: common_handler.cpp  common_handler.hpp  image_provider.cpp  image_provider.hpp  main.cpp
old_src/qml/: FileOpener.qml  ImageViewer.qml
src/: CMakeLists.txt  common_handler.cpp  common_handler.hpp  converter.cpp  customscene.hpp  image_provider.cpp  image_provider.hpp  main.cpp  main.qrc  meanvalue_seamless_cloning.cpp  targetscene.hpp  types.hpp
src/app/: CMakeLists.txt  customscene.hpp  customview.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mvc_sourcescene.hpp  mvc_targetscene.hpp  sourcescene.cpp  sourcescene.hpp  targetscene.cpp  targetscene.hpp
src/core/: CMakeLists.txt  customscene.hpp  mainwindow.cpp  mainwindow.hpp  sourcescene.hpp  targetscene.hpp
src/core/ui/: CMakeLists.txt  customscene.cpp  customscene.hpp  customview.cpp  customview.hpp
src/core/utilities/: CMakeLists.txt  converter.cpp  converter.hpp  macros.hpp
src/modules/mvc/: CMakeLists.txt  meanvalue_seamless_cloning.cpp  meanvalue_seamless_cloning.hpp  mesh2d.cpp  mesh2d.hpp  mvc_sourcescene.cpp  mvc_sourcescene.hpp  mvc_targetscene.cpp  mvc_targetscene.hpp  mvc_types.hpp  mvc_window.cpp  mvc_window.hpp  mvc_window.ui
src/modules/photomontage/: CMakeLists.txt  mvc_window.cpp  mvc_window.ui  photomontage.cpp  photomontage.hpp  photomontage_sourcescene.cpp  photomontage_sourcescene.hpp  pm_modes.hpp  pm_sourcescene.cpp  pm_sourcescene.hpp  pm_sourcewidget.cpp  pm_sourcewidget.hpp  pm_sourcewidget.ui  pm_targetscene.cpp  pm_targetscene.hpp  pm_window.cpp  pm_window.hpp  pm_window.ui
src/modules/pyramid_blending/: CMakeLists.txt  pb_window.cpp  pb_window.hpp  pb_window.ui
src/qml/: FileOpener.qml  ImageViewer.qml  main.qml
src/utilities/: CMakeLists.txt  converter.cpp  converter.hpp
src2/: CMakeLists.txt  converter.cpp  converter.hpp  customscene.cpp  customscene.hpp  customview.cpp  customview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  meanvalue_seamless_cloning.cpp  meanvalue_seamless_cloning.cpp.autosave  meanvalue_seamless_cloning.hpp  mesh2d.cpp  mesh2d.hpp  mvc_types.hpp  sourcescene.cpp  sourcescene.hpp  targetscene.cpp  targetscene.hpp
standalone_tools/AVCamManualUsingtheManualCaptureAPI/AVCamManual/: AAPLCameraViewController.m
standalone_tools/AVCamManualUsingtheManualCaptureAPI/AVCamManual.xcodeproj/: project.pbxproj
standalone_tools/AVCamManualUsingtheManualCaptureAPI/AVCamManual/Base.lproj/: Main.storyboard
standalone_tools/CameraApp/Camera/Camera/: AppDelegate.h  AppDelegate.m  Info.plist  Processing.h  Processing.mm  ViewController.h  ViewController.m  main.m
standalone_tools/CameraApp/Camera/Camera.xcodeproj/: project.pbxproj
standalone_tools/CameraApp/Camera/Camera/Base.lproj/: LaunchScreen.xib
standalone_tools/CameraApp/Camera/CameraTests/: CameraTests.m  Info.plist
standalone_tools/halftoning/src/: CMakeLists.txt  main.cpp
